--- a/about/index.html
+++ b/about/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>About &middot; The Butler</title>
-    <meta name="description" content="A ready to use static blog, powered by Cecil." />
+    <title>About &middot; Sebastian Franjou</title>
+    <meta name="description" content="Sebastian&#039;s projects" />
     <meta name="keywords" content="Cecil, Static Site Generator, SSG" />
     <meta name="author" content="Arnaud Ligny" />
     <meta name="robots" content="index,follow" />
-    <link rel="canonical" type="text/html" title="About &middot; The Butler" href="/about/" />
+    <link rel="canonical" type="text/html" title="About &middot; Sebastian Franjou" href="/about/" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="The Butler" />
+    <meta property="og:site_name" content="Sebastian Franjou" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="About &middot; The Butler" />
-    <meta property="og:description" content="A ready to use static blog, powered by Cecil." />
+    <meta property="og:title" content="About &middot; Sebastian Franjou" />
+    <meta property="og:description" content="Sebastian&#039;s projects" />
     <meta property="og:url" content="/about/" />
-    <meta name="twitter:title" content="About &middot; The Butler" />
-    <meta name="twitter:description" content="A ready to use static blog, powered by Cecil." />
+    <meta name="twitter:title" content="About &middot; Sebastian Franjou" />
+    <meta name="twitter:description" content="Sebastian&#039;s projects" />
     <meta name="twitter:card" content="summary" />
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
@@ -39,9 +39,9 @@
       <div class="container  sidebar-sticky">
         <div class="sidebar-about">
           <h1>
-            <a href="/">The Butler</a>
+            <a href="/">Sebastian Franjou</a>
           </h1>
-          <p class="lead">A ready to use static blog, powered by Cecil.</p>
+          <p class="lead">Sebastian's projects</p>
         </div>
         <nav class="sidebar-nav">
           <a class="sidebar-nav-item item-weight-0" href="/">Home</a>
