--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>The Butler &middot; Your blogging assistant</title>
-    <meta name="description" content="A ready to use static blog, powered by Cecil." />
+    <title>Sebastian Franjou &middot; Portfolio</title>
+    <meta name="description" content="Sebastian&#039;s projects" />
     <meta name="keywords" content="Cecil, Static Site Generator, SSG" />
     <meta name="author" content="Arnaud Ligny" />
     <meta name="robots" content="index,follow" />
-    <link rel="canonical" type="text/html" title="The Butler &middot; Your blogging assistant" href="/" />
-    <link rel="alternate" type="application/atom+xml" title="The Butler &middot; Your blogging assistant (ATOM)" href="/atom.xml" />
+    <link rel="canonical" type="text/html" title="Sebastian Franjou &middot; Portfolio" href="/" />
+    <link rel="alternate" type="application/atom+xml" title="Sebastian Franjou &middot; Portfolio (ATOM)" href="/atom.xml" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="The Butler" />
+    <meta property="og:site_name" content="Sebastian Franjou" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="The Butler &middot; Your blogging assistant" />
-    <meta property="og:description" content="A ready to use static blog, powered by Cecil." />
+    <meta property="og:title" content="Sebastian Franjou &middot; Portfolio" />
+    <meta property="og:description" content="Sebastian&#039;s projects" />
     <meta property="og:url" content="/" />
-    <meta name="twitter:title" content="The Butler &middot; Your blogging assistant" />
-    <meta name="twitter:description" content="A ready to use static blog, powered by Cecil." />
+    <meta name="twitter:title" content="Sebastian Franjou &middot; Portfolio" />
+    <meta name="twitter:description" content="Sebastian&#039;s projects" />
     <meta name="twitter:card" content="summary" />
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
@@ -40,9 +40,9 @@
       <div class="container  sidebar-sticky">
         <div class="sidebar-about">
           <h1>
-            <a href="/">The Butler</a>
+            <a href="/">Sebastian Franjou</a>
           </h1>
-          <p class="lead">A ready to use static blog, powered by Cecil.</p>
+          <p class="lead">Sebastian's projects</p>
         </div>
         <nav class="sidebar-nav">
           <a class="sidebar-nav-item active item-weight-0" href="/">Home</a>
