Default christmas animation page

--- a/content/index.html
+++ b/content/index.html
@@ -3,37 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f2f5;
-        }
-        .container {
-            text-align: center;
-            padding: 2rem;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #1a1a1a;
-            margin-bottom: 0.5rem;
-        }
-        p {
-            color: #666;
-        }
-    </style>
+    <title>Under reconstruction</title>
 </head>
 <body>
     <div class="container">
-        <h1>Hello World</h1>
-        <p>This is my new basic HTML site.</p>
+        <h1>sfranjou.com is under reconstruction</h1>
+        <p>Coming back soon, simpler and prettier</p>
     </div>
 </body>
 </html>
