--- a/content/christmas.html
+++ b/content/christmas.html
@@ -64,16 +64,15 @@
             z-index: 100;
             text-align: center;
             width: 90%;
-            max-width: 600px;
-            height: 400px; /* Give it some height for absolute children */
+            max-width: 800px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 80vh;
         }
 
         .greeting {
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -84,11 +83,13 @@
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.3);
-            padding: 2.5rem;
-            border-radius: 24px;
-            box-shadow: 0 12px 40px 0 rgba(0, 0, 0, 0.5);
+            padding: clamp(1.5rem, 5vw, 3rem);
+            border-radius: 32px;
+            box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.6);
             transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1), opacity 1s ease;
             pointer-events: none;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .greeting.active {
@@ -121,10 +122,11 @@
 
         .greeting img {
             max-width: 100%;
-            max-height: 30vh;
+            max-height: clamp(35vh, 50vw, 60vh);
             object-fit: contain;
-            border-radius: 16px;
+            border-radius: 20px;
             margin-top: 1.5rem;
+            box-shadow: 0 8px 24px rgba(0,0,0,0.3);
         }
         /* Sequential Delays removed - now handled via JS */
 
