Hide snowflakes that haven't moved yet

--- a/content/christmas.html
+++ b/content/christmas.html
@@ -33,7 +33,8 @@
         /* Festive Background Elements */
         .snow-container {
             position: fixed;
-            top: 0;
+            overflow: hidden;
+            top: -10px;
             left: 0;
             width: 100%;
             height: 100%;
@@ -164,7 +165,7 @@
             <span class="ornament">❄️</span>
             <h1>Merry Christmas!</h1>
             <img src = img/Xmas4.jpg>
-            <p>I forgot it at home, but you'll get it in the mail</p>
+            <p>I forgot your present at home, but you'll get it in the mail</p>
         </div>
     </div>
 
