real bandmember names

--- a/content/oneredcent.html
+++ b/content/oneredcent.html
@@ -28,7 +28,7 @@
                     <div class="member-photo">
                         <img src="https://placehold.co/400x400/3E2723/F9F4EF?text=Singer" alt="Lead Singer">
                     </div>
-                    <h3 class="member-name">Diana Ross-ish</h3>
+                    <h3 class="member-name">Mariabelle Azemar</h3>
                     <div class="member-role">Lead Vocals</div>
                     <p>Bringing the house down with vocal acrobatics and soul-stirring melodies.</p>
                 </article>
@@ -36,7 +36,7 @@
                     <div class="member-photo">
                         <img src="https://placehold.co/400x400/D84315/F9F4EF?text=Guitar" alt="Guitarist">
                     </div>
-                    <h3 class="member-name">Funky Phil</h3>
+                    <h3 class="member-name">Sebastian Franjou</h3>
                     <div class="member-role">Guitar</div>
                     <p>Master of the wah-wah pedal and the syncopated rhythm.</p>
                 </article>
@@ -44,7 +44,7 @@
                     <div class="member-photo">
                         <img src="https://placehold.co/400x400/006064/F9F4EF?text=Bass" alt="Bassist">
                     </div>
-                    <h3 class="member-name">Bootsy B.</h3>
+                    <h3 class="member-name">Erik Strand</h3>
                     <div class="member-role">Bass</div>
                     <p>Keeping it low, heavy, and undeniably groovy.</p>
                 </article>
@@ -52,8 +52,24 @@
                     <div class="member-photo">
                         <img src="https://placehold.co/400x400/F9A825/3E2723?text=Drums" alt="Drummer">
                     </div>
-                    <h3 class="member-name">Rhythm Ray</h3>
+                    <h3 class="member-name">Alby Musaelian</h3>
                     <div class="member-role">Drums</div>
+                    <p>The heartbeat of the band, precise and powerful.</p>
+                </article>
+                <article class="member-card">
+                    <div class="member-photo">
+                        <img src="https://placehold.co/400x400/F9A825/3E2723?text=Keyboards" alt="Keyboards">
+                    </div>
+                    <h3 class="member-name">Michael Joseph Peters</h3>
+                    <div class="member-role">Keyboards</div>
+                    <p>The heartbeat of the band, precise and powerful.</p>
+                </article>
+                <article class="member-card">
+                    <div class="member-photo">
+                        <img src="https://placehold.co/400x400/F9A825/3E2723?text=Alto Saxophone" alt="Alto Saxophone">
+                    </div>
+                    <h3 class="member-name">Andrew Li</h3>
+                    <div class="member-role">Alto Saxophone</div>
                     <p>The heartbeat of the band, precise and powerful.</p>
                 </article>
             </div>
