Add title to video cards

--- a/content/oneredcent.html
+++ b/content/oneredcent.html
@@ -54,17 +54,35 @@
             <h2>Media</h2>
             <div class="media-grid">
                 <!-- Red Room -->
-               <div class="video-wrapper"> 
-                    <iframe title="Red Room - Hiatus Kayote" src="https://drive.google.com/file/d/1mAZhaMFOnjwVRe0xmeAwDFQoU6gLsdr8/preview" width="640" height="480"></iframe>
-                    <!-- The two that shouldn't be -->
-               </div>
-                              <div class="video-wrapper"> 
-<iframe title="The two that shouldn't be - Mariabelle Azemar" src="https://drive.google.com/file/d/1KybRVlA2xfSIKrPE3aI1x8SI73VvH-8g/preview" width="640" height="480"></iframe>
-               </div>
-               <!-- I wish -->
-               <div class="video-wrapper">
-<iframe title="I wish - Stevie Wonder" src="https://drive.google.com/file/d/1mo6O9GvdBEymrHAuadYEtQ4kltK9-s87/preview" width="640" height="480"></iframe>
-               </div>
+                <article class="video-card">
+                    <div class="video-wrapper"> 
+                        <iframe title="Red Room - Hiatus Kayote" src="https://drive.google.com/file/d/1mAZhaMFOnjwVRe0xmeAwDFQoU6gLsdr8/preview" width="640" height="480"></iframe>
+                    </div>
+                    <div class="video-info">
+                        <h3 class="video-title">Red Room</h3>
+                        <p class="video-subtitle">Hiatus Kaiyote</p>
+                    </div>
+                </article>
+
+                <article class="video-card">
+                    <div class="video-wrapper"> 
+                        <iframe title="The two that shouldn't be - Mariabelle Azemar" src="https://drive.google.com/file/d/1KybRVlA2xfSIKrPE3aI1x8SI73VvH-8g/preview" width="640" height="480"></iframe>
+                    </div>
+                    <div class="video-info">
+                        <h3 class="video-title">The Two That Shouldn't Be</h3>
+                        <p class="video-subtitle">Mariabelle Azemar Original</p>
+                    </div>
+                </article>
+
+                <article class="video-card">
+                    <div class="video-wrapper">
+                        <iframe title="I wish - Stevie Wonder" src="https://drive.google.com/file/d/1mo6O9GvdBEymrHAuadYEtQ4kltK9-s87/preview" width="640" height="480"></iframe>
+                    </div>
+                    <div class="video-info">
+                        <h3 class="video-title">I Wish</h3>
+                        <p class="video-subtitle">Stevie Wonder Cover</p>
+                    </div>
+                </article>
             </div>
         </section>
             
