Change the band section to a more minimal list

--- a/content/oneredcent.html
+++ b/content/oneredcent.html
@@ -101,57 +101,40 @@
             
         <section id="band" class="text-center">
             <h2>The Band</h2>
-            <div class="members-grid">
-                <!-- Example Profiles -->
-                <article class="member-card">
-                    <div class="member-photo">
-                        <img src="https://placehold.co/400x400/3E2723/F9F4EF?text=Singer" alt="Lead Singer">
-                    </div>
-                    <h3 class="member-name">Mariabelle Azemar</h3>
-                    <div class="member-role">Lead Vocals</div>
-                    <p>Bringing the house down with vocal acrobatics and soul-stirring melodies.</p>
-                </article>
-                <article class="member-card">
-                    <div class="member-photo">
-                        <img src="https://placehold.co/400x400/D84315/F9F4EF?text=Guitar" alt="Guitarist">
-                    </div>
-                    <h3 class="member-name">Sebastian Franjou</h3>
-                    <div class="member-role">Guitar</div>
-                    <p>Master of the wah-wah pedal and the syncopated rhythm.</p>
-                </article>
-                <article class="member-card">
-                    <div class="member-photo">
-                        <img src="https://placehold.co/400x400/006064/F9F4EF?text=Bass" alt="Bassist">
-                    </div>
-                    <h3 class="member-name">Erik Strand</h3>
-                    <div class="member-role">Bass</div>
-                    <p>Keeping it low, heavy, and undeniably groovy.</p>
-                </article>
-                 <article class="member-card">
-                    <div class="member-photo">
-                        <img src="https://placehold.co/400x400/F9A825/3E2723?text=Drums" alt="Drummer">
-                    </div>
-                    <h3 class="member-name">Alby Musaelian</h3>
-                    <div class="member-role">Drums</div>
-                    <p>The heartbeat of the band, precise and powerful.</p>
-                </article>
-                <article class="member-card">
-                    <div class="member-photo">
-                        <img src="https://placehold.co/400x400/F9A825/3E2723?text=Keyboards" alt="Keyboards">
-                    </div>
-                    <h3 class="member-name">Michael Joseph Peters</h3>
-                    <div class="member-role">Keyboards</div>
-                    <p>The heartbeat of the band, precise and powerful.</p>
-                </article>
-                <article class="member-card">
-                    <div class="member-photo">
-                        <img src="https://placehold.co/400x400/F9A825/3E2723?text=Alto Saxophone" alt="Alto Saxophone">
-                    </div>
-                    <h3 class="member-name">Andrew Li</h3>
-                    <div class="member-role">Alto Saxophone</div>
-                    <p>The heartbeat of the band, precise and powerful.</p>
-                </article>
+            
+            <div class="personnel-credits">
+                <div class="credit-row">
+                    <span class="role">Lead Vocals</span>
+                    <span class="dots"></span>
+                    <span class="name"><a href="https://www.instagram.com/hoodlumshowers/" target="_blank">Mariabelle Azemar</a></span>
+                </div>
+                <div class="credit-row">
+                    <span class="role">Guitar</span>
+                    <span class="dots"></span>
+                    <span class="name"><a href="https://www.instagram.com/sebastianlouisf/" target="_blank">Sebastian Franjou</a></span>
+                </div>
+                <div class="credit-row">
+                    <span class="role">Bass</span>
+                    <span class="dots"></span>
+                    <span class="name"><a href="https://www.instagram.com/strandomatic/" target="_blank">Erik Strand</a></span>
+                </div>
+                <div class="credit-row">
+                    <span class="role">Drums</span>
+                    <span class="dots"></span>
+                    <span class="name"><a target="_blank">Alby Musaelian</a></span>
+                </div>
+                <div class="credit-row">
+                    <span class="role">Keyboards</span>
+                    <span class="dots"></span>
+                    <span class="name"><a href="https://www.instagram.com/probably____someone/" target="_blank">Michael Joseph Peters</a></span>
+                </div>
+                <div class="credit-row">
+                    <span class="role">Alto Saxophone</span>
+                    <span class="dots"></span>
+                    <span class="name"><a href="https://www.instagram.com/a_li357/" target="_blank">Andrew Li</a></span>
+                </div>
             </div>
+        </section>
         <section id="contact" class="text-center">
             <h2>Get in Touch</h2>
             <div class="contact-container">
