Add audio section, add more videos

--- a/content/oneredcent.html
+++ b/content/oneredcent.html
@@ -50,9 +50,9 @@
             </div>
         </section>
 
-        <section id="media" class="text-center">
-            <h2>Media</h2>
-            <div class="media-grid">
+        <section id="video" class="text-center">
+            <h2>Video</h2>
+            <div class="video-grid">
                 <!-- Red Room -->
                 <article class="video-card">
                     <div class="video-wrapper"> 
@@ -89,12 +89,36 @@
                         <iframe title="Valerie - Amy Winehouse" src="https://drive.google.com/file/d/1PS7nLFPsYHZRoIF61rKRYWi6C3C7FndA/preview" width="640" height="480"></iframe>
                     </div>
                     <div class="video-info">
-                        <h3 class="video-title">Valerie (Acoustic)</h3>
+                        <h3 class="video-title">Valerie - Acoustic</h3>
                         <p class="video-subtitle">Amy Winehouse</p>
                     </div>
                 </article>
 
 
+                <article class="video-card">
+                    <div class="video-wrapper">
+                        <iframe title="September - Earth, Wind & Fire" src="https://drive.google.com/file/d/1HAf_gbsS9nawwcjjpgZ5YgIS4EPOhw34/preview" width="640" height="480"></iframe>
+                    </div>
+                    <div class="video-info">
+                        <h3 class="video-title">September - House Party Version</h3>
+                        <p class="video-subtitle">Earth, Wind & Fire</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section id="audio" class="text-center">
+            <h2>Audio</h2>
+            <div class="audio-grid">
+                <article class="audio-card">
+                    <div class="audio-wrapper">
+                        <iframe title="Vienna - Billy Joel" src="https://drive.google.com/file/d/1kGxTQjC5tA2DwFjlkds71ZQxm_a_33wn/preview" width="640" height="100"></iframe>
+                    </div>
+                    <div class="audio-info">
+                        <h3 class="audio-title">Vienna - Funk Version</h3>
+                        <p class="audio-subtitle">Billy Joel, Couch Arrangement</p>
+                    </div>
+                </article>
 
             </div>
         </section>
