--- a/content/oneredcent.html
+++ b/content/oneredcent.html
@@ -16,7 +16,7 @@
 
     <header>
         <h1>One Red Cent</h1>
-        <p style="font-size: 1.5rem; letter-spacing: 3px; font-weight: bold; margin-top: 0;">GROOVE • SOUL • FUNK</p>
+        <p style="font-size: 1.5rem; letter-spacing: 3px; font-weight: bold; margin-top: 0;">SOUL • FUNK • R&B</p>
     </header>
 
     <main class="container">
@@ -182,7 +182,6 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 oneredcent. All Rights Reserved. Keep it funky.</p>
     </footer>
 
     <!-- Script for Concert Logic (Placeholder) -->
