edit contact text, vienna description

--- a/content/oneredcent.html
+++ b/content/oneredcent.html
@@ -116,7 +116,7 @@
                     </div>
                     <div class="audio-info">
                         <h3 class="audio-title">Vienna - Funk Version</h3>
-                        <p class="audio-subtitle">Billy Joel, Couch Arrangement</p>
+                        <p class="audio-subtitle">Billy Joel (Couch Arrangement)</p>
                     </div>
                 </article>
 
@@ -162,7 +162,8 @@
         <section id="contact" class="text-center">
             <h2>Get in Touch</h2>
             <div class="contact-container">
-                <p>For booking or general inquiries</p>
+                <p>Book us for events or parties! We can bring all the necessary gear.
+                </p>
                 <div class="contact-links">
                     <a href="mailto:oneredcentmusic@gmail.com" class="contact-link email-link">
                         <span class="icon">
