index.html landing page with a bunch of musical info, backlink from oneredcent

--- a/content/index.html
+++ b/content/index.html
@@ -3,12 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under reconstruction</title>
+    <title>Sebastian Franjou's Personal Website</title>
+    <link rel="stylesheet" href="css/index.css">
+
 </head>
 <body>
     <div class="container">
-        <h1>sfranjou.com is under reconstruction</h1>
-        <p>Coming back soon, simpler and prettier</p>
+        <h1>Sebastian Franjou's Personal Website</h1>
+            <p>
+                I work on <a href="https://www.cakewalk.com/next">music software at Cakewalk</a>, and play music in the Boston area.
+                If you need a guitarist, bassist, sound engineer, or just want to talk about music tech, <a href="mailto:franjou.sebastian@gmail.com">shoot me an email</a>!
+            </p>
+        <h2>Current Musical Projects</h2>
+        <ul>
+            <li><a href="oneredcent.html">One Red Cent</a>: Soul, Funk and R&B band</li>
+            <li><a href="https://www.instagram.com/mambiseros/">Mambiseros</a>: Traditional Cuban Music and Fusion</li>
+            <li><a href="https://sunsalon.rocks/Sun+Salon">Sun Salon</a>: Poetry and free improvisation</li>
+        </ul>
+        <h2>(A Few) Past Musical Projects</h2>
+        <ul>
+            <li>Jazz at MIT: playing with <a href="https://vimeo.com/1057145939?fl=pl&fe=cm#t=1h13m14s">Miguel Zenon</a>, <a href="https://vimeo.com/1083208027?fl=pl&fe=cm ">Michael Mayo and the Vocal Jazz Ensemble</a>, or just <a href="https://youtu.be/YB4CRo-eGbM?si=kYEHsZipusZ5gx43&t=1866">my own music</a></li>
+            <li><a href="https://www.youtube.com/watch?v=jvuxMeSTY8c">Two Pieces for Guitar Quintet</a>: Chamber music for guitar, violin, cello, flute, and clarinet (also check out Joey Gu's excellent <i>Quintet in F Major</i> in this recording)</li>
+            <li><a href="https://www.youtube.com/watch?v=O6RwDt2jxmo">Onett</a>: One of several arrangements I wrote and conducted for the MIT Video Game Orchestra</li>
+            <li><a href="https://www.youtube.com/watch?v=zhbkYABmBxc">Glitchbox</a>: Noisy glitchy stuff with sensors and electronics</li>
+            <li><a href="https://www.youtube.com/watch?v=-giVr22YCn8">Eleanor Rigby</a>: Fingerstyle guitar arrangement</li>
+            <li><a href="https://soundcloud.com/sebastianfranjou/cn2-g-franjou/s-BLYYvKEa02D?in=sebastianfranjou/sets/unlisted-recordings/s-0jsjjZFf5Tv&si=1bb26a78243944e4b3de7afa98cc569f">Pfff</a>: Chamber piece for Clarinet, Flute and Cello</li>
+            <li><a href="https://soundcloud.com/sebastianfranjou/synthbeat-anthropology?si=9e3c0b7367204b5c849ec0c4318f5d77">Anthropology</a> and <a href="https://soundcloud.com/sebastianfranjou/kitchenbeat?si=425fcf4e22164a51807617dc7d62af7d&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">KitchenBeat</a>: short electronic pieces</li>
+        </ul>
     </div>
+
+    <h2>Socials</h2>
+    <ul>
+        <li><a href="https://www.instagram.com/sebastianlouisf/">Instagram</a></li>
+        <li><a href="https://github.com/sfranjou/">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/sebastian-franjou-968675157/">Linkedin</a> (if you must)</li>
+    </u>
+    <footer>
+        <p><a href="https://arts.mit.edu/2021-louis-sudler-prize/">Read more about me</a>.</p>
+    </footer>
 </body>
 </html>
