--- a/content/index.html
+++ b/content/index.html
@@ -22,7 +22,13 @@
         </ul>
         <h2>(A Few) Past Musical Projects</h2>
         <ul>
-            <li>Jazz at MIT: playing with <a href="https://vimeo.com/1057145939?fl=pl&fe=cm#t=1h13m14s">Miguel Zenon</a>, <a href="https://vimeo.com/1083208027?fl=pl&fe=cm ">Michael Mayo and the Vocal Jazz Ensemble</a>, or just <a href="https://youtu.be/YB4CRo-eGbM?si=kYEHsZipusZ5gx43&t=1866">my own music</a></li>
+            <li>Jazz at MIT: 
+                <ul>
+                    <li>playing <a href="https://youtu.be/YB4CRo-eGbM?si=kYEHsZipusZ5gx43&t=1866">my own music</a></li>
+                    <li>with <a href="https://vimeo.com/1057145939?fl=pl&fe=cm#t=1h13m14s">Miguel Zenon and the Advanced Music Performance Ensemble</a></li>
+                    <li>with <a href="https://vimeo.com/1083208027?fl=pl&fe=cm ">Michael Mayo and the Vocal Jazz Ensemble</a></li>
+                </ul>
+            </li>
             <li><a href="https://www.youtube.com/watch?v=jvuxMeSTY8c">Two Pieces for Guitar Quintet</a>: Chamber music for guitar, violin, cello, flute, and clarinet (also check out Joey Gu's excellent <i>Quintet in F Major</i> in this recording)</li>
             <li><a href="https://www.youtube.com/watch?v=O6RwDt2jxmo">Onett</a>: One of several arrangements I wrote and conducted for the MIT Video Game Orchestra</li>
             <li><a href="https://www.youtube.com/watch?v=zhbkYABmBxc">Glitchbox</a>: Noisy glitchy stuff with sensors and electronics</li>
@@ -39,7 +45,7 @@
         <li><a href="https://www.linkedin.com/in/sebastian-franjou-968675157/">Linkedin</a> (if you must)</li>
     </u>
     <footer>
-        <p><a href="https://arts.mit.edu/2021-louis-sudler-prize/">Read more about me</a>.</p>
+        <p><a href="https://arts.mit.edu/2021-louis-sudler-prize/">Read more about me</a></p>
     </footer>
 </body>
 </html>
