--- a/content/index.html
+++ b/content/index.html
@@ -19,6 +19,7 @@
             <li><a href="oneredcent.html">One Red Cent</a>: Soul, Funk and R&B band</li>
             <li><a href="https://www.instagram.com/mambiseros/">Mambiseros</a>: Traditional Cuban Music and Fusion</li>
             <li><a href="https://sunsalon.rocks/Sun+Salon">Sun Salon</a>: Poetry and free improvisation</li>
+            <li><a href="https://www.instagram.com/whereswaldoaudiobook/">Where's Waldo Audiobook</a>: A genre and instrument-spanning collective playing covers and originals</li>
         </ul>
         <h2>(A Few) Past Musical Projects</h2>
         <ul>
