Add Vienna video, update videso with trimmed versions, remove audio section for now

--- a/content/oneredcent.html
+++ b/content/oneredcent.html
@@ -82,7 +82,7 @@
             <div class="video-wrapper">
               <iframe
                 title="Red Room - Hiatus Kayote"
-                src="https://drive.google.com/file/d/1mAZhaMFOnjwVRe0xmeAwDFQoU6gLsdr8/preview"
+                src="https://drive.google.com/file/d/1pbU1i9ry9L8GQJUTJHS-b9C_B5HZNvgO/preview"
                 width="640"
                 height="480"
               ></iframe>
@@ -97,7 +97,7 @@
             <div class="video-wrapper">
               <iframe
                 title="The two that shouldn't be - Mariabelle Azemar"
-                src="https://drive.google.com/file/d/1KybRVlA2xfSIKrPE3aI1x8SI73VvH-8g/preview"
+                src="https://drive.google.com/file/d/1PNiCd-5ry7BjdHUtGbe1hIEquoMW3hXV/preview"
                 width="640"
                 height="480"
               ></iframe>
@@ -112,7 +112,7 @@
             <div class="video-wrapper">
               <iframe
                 title="I wish - Stevie Wonder"
-                src="https://drive.google.com/file/d/1mo6O9GvdBEymrHAuadYEtQ4kltK9-s87/preview"
+                src="https://drive.google.com/file/d/1nEs8-DgHjM1kGsAff6a8A4Sv6vtHfv_t/preview""
                 width="640"
                 height="480"
               ></iframe>
@@ -120,6 +120,21 @@
             <div class="video-info">
               <h3 class="video-title">I Wish</h3>
               <p class="video-subtitle">Stevie Wonder Cover</p>
+            </div>
+          </article>
+
+            <article class="video-card">
+            <div class="video-wrapper">
+              <iframe
+                title="Vienna - Billy Joel"
+                src="https://drive.google.com/file/d/1Kvy3m1tKhT0D0T44_Y2i397esQi1t2Py/preview"
+                width="640"
+                height="480"
+              ></iframe>
+            </div>
+            <div class="video-info">
+              <h3 class="video-title">Vienna  - Funk Version</h3>
+              <p class="video-subtitle">Billy Joel (Couch Arrangement)</p>
             </div>
           </article>
 
@@ -155,7 +170,8 @@
         </div>
       </section>
 
-      <section id="audio" class="text-center">
+      <!-- Comment out the audio section until we have audio only media to show -->
+      <!-- <section id="audio" class="text-center">
         <h2>Audio</h2>
         <div class="audio-grid">
           <article class="audio-card">
@@ -173,7 +189,7 @@
             </div>
           </article>
         </div>
-      </section>
+      </section> -->
 
       <section id="band" class="text-center">
         <h2>The Band</h2>
